# autotools

./: Makefile.am  README  configure.ac
apps/: Makefile.am  hello.c
libs/: Makefile.am  libHello.c  libHello.h  libHello.pc.in
